MND-216 fixed z-index for Cookie popup

--- a/src/assets/styles/pages/_content-home.scss
+++ b/src/assets/styles/pages/_content-home.scss
@@ -1,14 +1,14 @@
 // -------------- Cookie ----------------- //
 .Cookie--blood-orange {
   width: 330px !important;
-  left: 54px !important;
+  left: 60px !important;
   bottom: 10px !important;
   padding: 12px !important;
   padding-right: 20px !important;
   border-radius: 5px;
   background-color: #fff !important;
-  box-shadow: 2px 2px 15px 0 rgba(38, 36, 32, 0.34);
-  z-index: 9999999999;
+  box-shadow: 0 2px 15px 0 rgba(38, 36, 32, 0.34);
+  z-index: 9999999999 !important;
   .Cookie__buttons {
     width: 30px !important;
     height: 30px !important;
